--- a/Pages/Consultas/Compras.razor
+++ b/Pages/Consultas/Compras.razor
@@ -10,186 +10,178 @@
 
 @using BLL
 
-<EditForm Model="compra" OnValidSubmit="Guardar">
+<EditForm Model="compra">
     <DataAnnotationsValidator />
-    
-<a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
+
+    <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
        data-placement="right" title="Regresar al inventario" href="inventario">
-        <i
-            class="oi oi-arrow-circle-left"/>
+        <i class="oi oi-arrow-circle-left" />
     </a>
-    
 
-        <p />
+    <p />
 
-        <div class="card-header justify-content-center text-center bg-ordendecompracolor">
-            <h3 class="card-title">
-                Compras
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
-                </svg>
-            </h3>
-        </div>
-        <hr>
+    <div class="card-header justify-content-center text-center bg-ordendecompracolor">
+        <h3 class="card-title">
+            Compras
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
+            </svg>
+        </h3>
+    </div>
+    <hr>
 
-        <div class="card-body">
-            <div class="row">
+    <div class="card-body">
+        <div class="row">
 
-                @*...................... Fecha ......................*@
+            @*...................... Fecha ......................*@
 
-                <div class="form-group col-3">
-                    <label>Fecha</label>
-                    <InputDate @bind-Value="FechaCompra" class="form-control" />
-                </div>
+            <div class="form-group col-3">
+                <label>Fecha</label>
+                <InputDate @bind-Value="FechaCompra" class="form-control" />
+            </div>
 
 
-                @*...................... Nombre ......................*@
+            @*...................... Nombre ......................*@
 
-                <div class="form-group col-3">
-                     <label>
-                            Articulo
-                            <div class="oi oi-cart"></div>
-                        </label>
-                        <select @bind="ArticuloSeleccionado" class="form-select text-14"
-                                @onfocusout="ObtenerDatosArticulo">
-                            <option value="0" disabled selected> Seleccione un articulo </option>
-                            @foreach (Articulo item in ArticuloList)
-                            {
-                                <option value="@item.ArticuloId">@item.Nombre</option>
-                            }
-                        </select>
-                </div>
+            <div class="form-group col-3">
+                <label>
+                    Articulo
+                    <div class="oi oi-cart"></div>
+                </label>
+                <select @bind="ArticuloSeleccionado" class="form-select text-14"
+                        @onfocusout="ObtenerDatosArticulo">
+                    <option value="0" disabled selected> Seleccione un articulo </option>
+                    @foreach (Articulo item in ArticuloList)
+                    {
+                        <option value="@item.ArticuloId">@item.Nombre</option>
+                    }
+                </select>
+            </div>
 
-                @*...................... Categoria ......................*@
+            @*...................... Categoria ......................*@
 
-                <div class="form-group col-md-3">
-                        <label>
-                            Suplidor
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+            <div class="form-group col-md-3">
+                <label>
+                    Suplidor
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                     </svg>
-                        </label>
-                        <select @bind="suplidor.SuplidorId" class="form-select text-14">
-                            <option value="0" disabled selected>Seleccione un suplidor</option>
-                            @foreach (Suplidor item in SuplidorList)
-                            {
-                                <option value="@item.SuplidorId">@item.Nombre </option>
-                            }
-                        </select>
-                    </div>
-
-                @*...................... Cantidad ......................*@
-
-                <div class="form-group col-3">
-                    <label>Cantidad</label>
-                    <InputNumber @bind-Value="CantidadComprada" class="form-control" />
-                    <ValidationMessage For="@(() => CantidadComprada)" />
-                </div>
+                </label>
+                <select @bind="compra.SuplidorId" class="form-select text-14">
+                    <option value="0" disabled selected>Seleccione un suplidor</option>
+                    @foreach (Suplidor item in SuplidorList)
+                    {
+                        <option value="@item.SuplidorId">@item.Nombre </option>
+                    }
+                </select>
             </div>
-            <br>
 
-            <div class="row">
+            @*...................... Cantidad ......................*@
 
-                <div class="form-group col-3">
-                    <label>Costo / Unidad</label>
-                    <InputNumber @bind-Value="articulo.Costo" class="form-control" readOnly="true"/>
-                    
-                </div>
-
-                @*...................... Precio ......................*@
-
-                <div class="form-group col-3">
-                    <label>Precio</label>
-                    <InputNumber @bind-Value="Precio" class="form-control" />
-                    <ValidationMessage For="@(() => Precio)" />
-                </div>
-
-                
-
-                
-
-                @*...................... Botones ......................*@
-
-               <p/>
-
-                <div class="card-footer">
-
-                    <div class="form-group text-center" display: inline-block>
-
-                        <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo" title="Nuevo articulo">
-                            <span class="oi oi-file"> Nuevo</span>
-                        </button>
-
-                        <button type="submit" class="btn btn-lg btn-success" title="Comprar articulo">
-                            <span class="oi oi-document"> Comprar</span>
-                        </button>
-
-                        
-
-                    </div>
-                </div>
-                <br />
-
-                <br />
-                <br>
-                <hr>
-
-                <table class="shadow 4 rz-border-radius-4 table table-light table-striped table-bordered">
-                    <thead class="thead">
-                        <tr class="text-center table bg-inventariocolor">
-                            <th class="border border-3">Código</th>
-
-                            <th class="border border-3">Descripción Articulo</th>
-
-                            <th class="border border-3">Categoria</th>
-
-                            <th class="border border-3">Cantidad Registrada</th>
-
-                            <th class="border border-3">Fecha de registro</th>
-
-                            <th class="border border-3">Ver</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @if (lista.Count == 0)
-                        {
-                            <p />
-                            <span>Empty</span>
-                        }
-                        else
-                        {
-                            @foreach (var item in lista)
-                            {
-                                FechaArticuloRegistrado = DateOnly.FromDateTime(item.FechaCreacion);
-                                @if (item.FechaCreacion.Month == FechaArticuloRegistrado.Month && item.FechaCreacion.Year == FechaArticuloRegistrado.Year && item.Cantidad < 50)
-                                {
-                                    descripcion = categoriaBLL.Buscar(item.CategoriaId);
-                                    if (descripcion == null) break;
-                                    <tr class="text-center">
-                                        <td class="border border-3">@item.ArticuloId</td>
-
-                                        <td class="border border-3">@item.Nombre</td>
-
-                                        <td class="border border-3">@descripcion.Descripcion</td>
-
-                                        <td class="border border-3">@item.Cantidad</td>
-
-                                        <td class="border border-3">@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
-
-                                        <td class="border border-3">
-                                            <a class="btn btn-sm btn-outline-success oi oi-eye"
-                                               href="articulo/@item.ArticuloId">
-                                            </a>
-                                        </td>
-                                    </tr>
-                                }
-                            }
-                        }
-                    </tbody>
-                </table>
+            <div class="form-group col-3">
+                <label>Cantidad</label>
+                <InputNumber @bind-Value="CantidadComprada" class="form-control" />
+                <ValidationMessage For="@(() => CantidadComprada)" />
             </div>
         </div>
-   
+        <br>
+
+        <div class="row">
+
+            <div class="form-group col-3">
+                <label>Costo / Unidad</label>
+                <InputNumber @bind-Value="articulo.Costo" class="form-control" readOnly="true" />
+
+            </div>
+
+            @*...................... Precio ......................*@
+
+            <div class="form-group col-3">
+                <label>Precio</label>
+                <InputNumber @bind-Value="Precio" class="form-control" />
+                <ValidationMessage For="@(() => Precio)" />
+            </div>
+
+            @*...................... Botones ......................*@
+
+            <p />
+
+            <div class="card-footer">
+
+                <div class="form-group text-center" display: inline-block>
+
+                    <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo" title="Nuevo articulo">
+                        <span class="oi oi-file"> Nuevo</span>
+                    </button>
+
+                    <button type="button" class="btn btn-lg btn-success" @onclick="Guardar" title="Comprar articulo">
+                        <span class="oi oi-document"> Comprar</span>
+                    </button>
+
+                </div>
+            </div>
+            <br />
+
+            <br />
+            <br>
+            <hr>
+
+            <table class="shadow 4 rz-border-radius-4 table table-light table-striped table-bordered">
+                <thead class="thead">
+                    <tr class="text-center table bg-inventariocolor">
+                        <th class="border border-3">Código</th>
+
+                        <th class="border border-3">Descripción Articulo</th>
+
+                        <th class="border border-3">Categoria</th>
+
+                        <th class="border border-3">Cantidad Registrada</th>
+
+                        <th class="border border-3">Fecha de registro</th>
+
+                        <th class="border border-3">Ver</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (lista.Count == 0)
+                    {
+                        <p />
+                        <span>Empty</span>
+                    }
+                    else
+                    {
+                        @foreach (var item in lista)
+                        {
+                            FechaArticuloRegistrado = DateOnly.FromDateTime(item.FechaCreacion);
+                            @if (item.FechaCreacion.Month == FechaArticuloRegistrado.Month && item.FechaCreacion.Year == FechaArticuloRegistrado.Year && item.Cantidad < 50)
+                            {
+                                descripcion = categoriaBLL.Buscar(item.CategoriaId);
+                                if (descripcion == null) break;
+                                <tr class="text-center">
+                                    <td class="border border-3">@item.ArticuloId</td>
+
+                                    <td class="border border-3">@item.Nombre</td>
+
+                                    <td class="border border-3">@descripcion.Descripcion</td>
+
+                                    <td class="border border-3">@item.Cantidad</td>
+
+                                    <td class="border border-3">@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
+
+                                    <td class="border border-3">
+                                        <a class="btn btn-sm btn-outline-success oi oi-eye"
+                                           href="articulo/@item.ArticuloId">
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 </EditForm>
 
 @code {
@@ -211,11 +203,13 @@
 
     private DateOnly FechaCompra { get; set; }
 
-     private DateOnly FechaArticuloRegistrado { get; set; }
+    private DateOnly FechaArticuloRegistrado { get; set; }
 
     public int ArticuloSeleccionado { get; set; }
 
     public string ArticuloComprado { get; set; }
+
+    private Ventas venta { get; set; } = new Ventas();
 
     public List<Articulo> lista { get; set; } = new List<Articulo>();
 
@@ -240,6 +234,8 @@
 
     List<Categoria> CategoriaList = new List<Categoria>();
 
+    List<Compra> CompraList = new List<Compra>();
+
     //-----------------------------------------------------------------------
 
     protected override void OnInitialized()
@@ -248,9 +244,8 @@
         suplidor = new Suplidor();
         ArticuloList = articuloBLL.GetList(c => true);
         SuplidorList = suplidorBLL.GetList(c => true);
+        CompraList = compraBLL.GetList(c => true);
         lista = articuloBLL.GetList(a => true);
-
-        
     }
 
     public void Nuevo() // Nueva compra
@@ -264,33 +259,40 @@
         ArticuloList = articuloBLL.GetList(c => true);
         SuplidorList = suplidorBLL.GetList(c => true);
         lista = articuloBLL.GetList(a => true);
+        CompraList = compraBLL.GetList(c => true);
     }
 
     private void ObtenerDatosArticulo() // Obteniendo los datos del articulo seleccionado
     {
         Articulo auxArticulo = articuloBLL.Buscar(ArticuloSeleccionado);
 
+        Compra auxArticulos = compraBLL.Buscar(ArticuloSeleccionado);
+
         if (auxArticulo != null)
         {
-            
             ArticuloComprado = auxArticulo.Nombre;
 
             articulo.Costo = auxArticulo.Costo; // Mostrando la cantidad de unidades del articulo seleccionado
+        }
 
-       
+        if(auxArticulos != null)
+        {
+            ArticuloSeleccionado = auxArticulos.Articulo.ArticuloId;
+
+            CantidadComprada = auxArticulos.CantidadComprada;
         }
     }
 
 
     public void Guardar() // Guardar articulo
     {
-        if (compra.ArticuloId == 0) // Validacion
+        if (ArticuloSeleccionado == 0) // Validacion
         {
             Toast.ShowWarning("Tiene que seleccionar un articulo.");
             return;
         }
 
-         if (compra.SuplidorId == 0) // Validacion
+        if (compra.SuplidorId == 0) // Validacion
         {
             Toast.ShowWarning("Tiene que seleccionar un suplidor.");
             return;
@@ -302,17 +304,16 @@
             return;
         }
 
-         if (CantidadComprada > articulo.Cantidad) // Validacion
+        if (CantidadComprada > venta.Existencia) // Validacion
         {
             Toast.ShowWarning("La cantidad de compra no puede ser mayor a la existencia.");
             return;
         }
 
-       bool guardado;
-
-    
+        bool guardado;
 
         guardado = compraBLL.Guardar(compra);
+
         if (guardado)
         {
             guardado = true;
@@ -323,14 +324,10 @@
             CantidadComprada = 0;
             Precio = 0;
             Toast.ShowSuccess($"Compra exitosa");
-               
-           }
+
+        }
         else
             Toast.ShowError("No fue posible guardar ");
-    }
-       
-
-        
     }
 
 
@@ -350,6 +347,7 @@
         else
             Toast.ShowError("No fue posible eliminar");
     }
-    
+}
+
 
 
